<resources>
    <string name="app_name">Vehicle</string>
    <string name="login_phone">手机号登录</string>
    <string name="phone">手机号码</string>
    <string name="wechat">微信登录</string>
    <string name="phone2">请输入手机号码</string>
    <string name="num">+86</string>
    <string name="psw">密码</string>
    <string name="psw2">请输入密码</string>
    <string name="dialog_msg">请求中…</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_title">手机号注册</string>
    <string name="register_title2">忘记密码</string>
    <string name="forget">忘记密码</string>
    <string name="scanner_msg9">扫描设备</string>
    <string name="scanner_msg">将二维码和条形码放入识别框</string>
    <string name="code_msg">为了校验安全，我们会向你的手机发送短信验证码</string>
    <string name="code_msg2">验证码</string>
    <string name="code_msg3">请输入验证码</string>
    <string name="get_coede">发送验证码</string>
    <string name="get_coede2">从新发送</string>
    <string name="reg">完成</string>
    <string name="home_label">车辆</string>
    <string name="home_label2">车况</string>
    <string name="home_label3">社区</string>
    <string name="home_label4">我的</string>
    <string name="home_data">故障码数量</string>
    <string name="home_data2">总里数</string>
    <string name="home_data3">累计行驶时间</string>
    <string name="home_data4">累计油耗</string>
    <string name="home_dan">个</string>
    <string name="home_dan2">Km</string>
    <string name="home_dan3">分钟</string>
    <string name="home_dan4">L</string>
    <string name="home_dan5">Km/h</string>
    <string name="home_dan6">rpm</string>
    <string name="home_dan7">L/100Km</string>
    <string name="home_youhao">瞬间油耗量</string>
    <string name="home_chesu">最高车速</string>
    <string name="home_zhuansu">最高转速</string>
    <string name="home_data5">本次行驶里程</string>
    <string name="home_data6">行驶车速</string>
    <string name="home_data7">平均油耗量</string>
    <string name="home_data8">汽车服务</string>
    <string name="home_data9">接车</string>
    <string name="qu_data">圈子</string>
    <string name="qu_data2">收藏</string>
    <string name="kuang_data">故障码</string>
    <string name="kuang_data2">警告</string>
    <string name="gu_data">燃料和空气计量和辅助排放控制系统</string>
    <string name="gu_data2">点火、失火监测系统</string>
    <string name="gu_data3">辅助排放控制系统</string>
    <string name="gu_data4">车速、怠速控制和辅助输入系统</string>
    <string name="gu_data5">计算机和辅助输入系统</string>
    <string name="gu_data6">传输系统</string>
    <string name="gu_data7">其他系统</string>
    <string name="gu_normal">正常</string>
    <string name="gu_fault">检测到异常</string>
    <string name="car_warning">左前胎漏气</string>
    <string name="car_warning2">右前胎漏气</string>
    <string name="car_warning3">左后胎漏气</string>
    <string name="car_warning4">右后胎漏气</string>
    <string name="my_1">设备列表</string>
    <string name="my_2">我的服务</string>
    <string name="my_3">消息管理</string>
    <string name="my_4">设置</string>
    <string name="list_title">设备列表</string>
    <string name="liang_data">本次急加速</string>
    <string name="liang_data2">本次急减速</string>
    <string name="liang_data3">累计怠速时间</string>
    <string name="liang_data4">平均热车时间</string>
    <string name="liang_data5">平均车速</string>
    <string name="liang_data6">累计急加速</string>
    <string name="bind_title">绑定设备</string>
    <string name="binding_msg">请输入设备号</string>
    <string name="binding_msg2">请输入Key</string>
    <string name="binding_msg3">配置</string>
    <string name="binding_msg4">扫描二维码</string>
    <string name="car_title">汽车服务</string>
    <string name="main_car_1">违章查询</string>
    <string name="main_car_2">新车询价</string>
    <string name="main_car_3">车型大全</string>
    <string name="main_car_4">高价卖车</string>
    <string name="main_car_5">高价收车</string>
    <string name="main_car_6">爱车估值</string>
    <string name="main_car_7">保值率计算</string>
    <string name="main_car_8">维修保养</string>
    <string name="main_car_9">免费ETC</string>
    <string name="main_car_10">车务代办</string>
    <string name="main_car_11">驾照查分</string>
    <string name="main_car_12">年检计算器</string>
    <string name="main_car_13">应急救援</string>
    <string name="main_car_14">代办验车</string>
    <string name="main_car_15">新车试驾</string>
    <string name="error_title">故障码</string>
    <string name="ments_title">贴子详情</string>
    <string name="set_title">设置</string>
    <string name="set_msg">账号安全</string>
    <string name="set_msg2">意见反馈</string>
    <string name="set_msg3">关于我们</string>
    <string name="set_msg4">免责声明</string>
    <string name="set_msg5">联系客服</string>
    <string name="set_msg6">清除缓存</string>
    <string name="set_msg7">检测更新</string>
    <string name="my_info_title">个人信息</string>
    <string name="my_info_mgs">头像</string>
    <string name="my_info_mgs2">用户昵称</string>
    <string name="my_info_mgs3">生日</string>
    <string name="my_info_mgs4">性别</string>
    <string name="my_info_mgs5">所在地</string>
    <string name="my_info_mgs6">签名</string>
    <string name="qu_pop1">图片</string>
    <string name="qu_pop2">视频</string>

</resources>
