<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/dp_8"
        android:text="@string/login_phone"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_70"
        android:src="@drawable/login_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_50"
        android:text="@string/phone"
        android:textColor="@color/white2"
        android:textSize="@dimen/sp_12" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_17" />

        <ImageView
            android:id="@+id/select_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/dp_6"
            android:src="@drawable/login_change" />

        <ImageView
            android:layout_width="@dimen/dp_1"
            android:layout_height="@dimen/dp_15"
            android:layout_gravity="center"
            android:background="@color/white3" />

        <EditText
            android:id="@+id/phone"
            style="style/loginTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/phone2"
            android:textColorHint="@color/white3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:padding="@dimen/dp_6"
            android:src="@drawable/login_del" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25"
        android:background="@color/white3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/psw"
        android:textColor="@color/white2"
        android:textSize="@dimen/sp_12" />

    <EditText
        android:id="@+id/psw"
        style="style/loginTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_25"
        android:background="@null"
        android:layout_marginEnd="@dimen/dp_25"
        android:hint="@string/psw2"
        android:textColorHint="@color/white3" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25"
        android:background="@color/white3" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_25"
        android:background="@color/white4"
        android:text="@string/login"
        android:textColor="@color/white3" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/register"
            android:textColor="@color/white2"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/login_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_25"
            android:text="@string/forget"
            android:textColor="@color/white2"
            android:textSize="@dimen/sp_12" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/login_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/community_share_1"
            android:text="@string/wechat"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>
</LinearLayout>