<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.RegisterActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/register_left_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/register_title"
            android:textColor="@color/hei"
            android:textSize="16sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_62"
        android:text="@string/phone"
        android:textColor="@color/hei"
        android:textSize="@dimen/sp_12" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num"
            android:textColor="@color/hei"
            android:textSize="@dimen/sp_17" />

        <ImageView
            android:id="@+id/select_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/dp_6"
            android:src="@drawable/forgot_change" />

        <ImageView
            android:layout_width="@dimen/dp_1"
            android:layout_height="@dimen/dp_15"
            android:layout_gravity="center"
            android:background="@color/white6" />

        <EditText
            android:id="@+id/phone"
            style="style/regTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:padding="10dp"
            android:hint="@string/phone2"
            android:textColorHint="@color/hei2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/dp_6"
            android:src="@drawable/forgot_del" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25"
        android:background="@color/white6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/psw"
        android:textColor="@color/hei"
        android:textSize="@dimen/sp_12" />

    <EditText
        android:id="@+id/psw"
        style="style/regTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25"
        android:hint="@string/psw2"
        android:background="@null"
        android:padding="@dimen/dp_10"
        android:textColorHint="@color/hei2" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25"
        android:background="@color/white6" />
</LinearLayout>