<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BindDeviceActivity">
    <RelativeLayout
        android:id="@+id/title_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView

            android:id="@+id/register_left_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/dp_15"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/dp_10"
            android:text="@string/bind_title"
            android:textColor="@color/hei"
            android:textSize="16sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_50"
        android:orientation="vertical">


        <EditText
            android:id="@+id/binding_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:background="@drawable/binding_rim"
            android:hint="@string/binding_msg"
            android:padding="@dimen/dp_10"
            android:textColorHint="@color/silver_sand"
            android:textSize="@dimen/sp_14" />

        <EditText
            android:id="@+id/binding_sn_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:background="@drawable/binding_rim"
            android:hint="@string/binding_msg2"
            android:layout_marginTop="@dimen/dp_10"
            android:padding="@dimen/dp_10"
            android:textColorHint="@color/silver_sand"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/binding_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_50"

            android:background="@drawable/login_rim"
            android:gravity="center"
            android:paddingBottom="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:text="@string/binding_msg3"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/binding_zxing_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/login_register_rim"
            android:gravity="center"
            android:paddingBottom="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:text="@string/binding_msg4"
            android:textColor="@color/malibu"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>
</LinearLayout>