<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/label_bg"
        android:layout_alignParentBottom="true"

        android:layout_height="wrap_content">


        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="@dimen/dp_3"
            android:layout_gravity="bottom"
            android:drawableTop="@drawable/home_label"
            android:gravity="center"
            android:text="@string/home_label" />
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/home_label2"
            android:button="@null"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:drawablePadding="@dimen/dp_3"
            android:text="@string/home_label2"
            android:layout_height="wrap_content" />
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:button="@null"
            android:layout_height="wrap_content" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:button="@drawable/home_label3"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:drawablePadding="@dimen/dp_3"
            android:text="@string/home_label"
            android:layout_height="wrap_content" />
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/home_label4"
            android:button="@null"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:drawablePadding="@dimen/dp_3"
            android:text="@string/home_label4"
            android:layout_height="wrap_content" />
    </RadioGroup>
</RelativeLayout>